Add eslint-svelte plugin

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,15 @@
     "browser": true,
     "es2021": true
   },
+  "plugins": [
+    "svelte3"
+  ],
+  "overrides": [
+    {
+      "files": ["*.svelte"],
+      "processor": "svelte3/svelte3"
+    }
+  ],
   "extends": "eslint:recommended",
   "parserOptions": {
     "ecmaVersion": 12,
