--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,8 @@
     "es2021": true
   },
   "plugins": [
-    "svelte3"
+    "svelte3",
+    "import"
   ],
   "overrides": [
     {
@@ -18,6 +19,7 @@
     "sourceType": "module"
   },
   "rules": {
+    "no-unresolved": 2,
     "indent": [
       "error",
       2
