--- a/package.json
+++ b/package.json
@@ -12,23 +12,23 @@
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@rollup/plugin-typescript": "^6.0.0",
     "@tsconfig/svelte": "^1.0.0",
-    "eslint": "^7.12.1",
+    "eslint": "^7.18.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-svelte3": "^2.7.3",
-    "rollup": "^2.3.4",
+    "prettier-plugin-svelte": "^1.4.2",
+    "rollup": "^2.38.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^6.0.0",
     "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0",
-    "svelte-check": "^1.0.0",
-    "svelte-preprocess": "^4.0.0",
-    "tslib": "^2.0.0",
-    "typescript": "^3.9.3",
-    "prettier-plugin-svelte": "^1.4.2"
+    "svelte": "^3.31.2",
+    "svelte-check": "^1.1.28",
+    "svelte-preprocess": "^4.6.3",
+    "tslib": "^2.1.0",
+    "typescript": "^3.9.3"
   },
   "dependencies": {
     "sirv-cli": "^1.0.0",
     "spotify-web-api-js": "^1.5.0",
-    "svelte-routing": "^1.4.2"
+    "svelte-routing": "^1.5.0"
   }
 }
